--- a/src/sass/rainbow.scss
+++ b/src/sass/rainbow.scss
@@ -1,7 +1,7 @@
 #rainbow {
   width: 6rem;
-  height: 100vh;
-  position: fixed;
+  height: 100%;
+  position: absolute;
   background: url('/img/rainbow.png') repeat-y center;
   background-size: contain;
   image-rendering: crisp-edges;
